--- a/css/tooltip.css
+++ b/css/tooltip.css
@@ -57,3 +57,54 @@
     min-width: 200px;
     min-height: 100px;
 }
+
+/* For Pokemon */
+
+.tooltip-party-pkmn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    white-space: pre-wrap;
+    min-width: 265px;
+    min-height: 100px;
+    padding: 5px;
+    row-gap: 5px;
+}
+
+.tooltip-party-pkmn-icon {
+    width: 68px;
+    height: 56px;
+}
+
+.tooltip-party-pkmn-stats {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    flex-direction: row;
+    background-color: rgb(114 137 218 / 25%);
+    outline-width: 1px;
+}
+
+.tooltip-party-pkmn-stats > div {
+    display: flex;
+    padding: 4px;
+    flex-direction: column;
+    align-items: center;
+    width: calc(100% / 6);
+}
+
+.tooltip-party-pkmn-gender {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+
+.tooltip-party-pkmn-eggmsg {
+    width: 265px;
+    text-align: center;
+}
+
+.tooltip-party-pkmn-info {
+    font-size: 0.75em;
+    color: skyblue;
+}
